k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nag3-student-app
  namespace: nag3-student-app
  labels:
    app: nag3-student-app
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
    name: http
  selector:
    app: nag3-student-app
